packages/editor/editor.css
/* ... */
.tl-mobile-rotate__bg {
	pointer-events: all;
	cursor: var(--tl-cursor-grab);
}

.tl-mobile-rotate__fg {
	pointer-events: none;
	stroke: var(--color-selection-stroke);
	fill: var(--color-background);
	stroke-width: calc(1.5px * var(--tl-scale));
}

.tl-transparent {
	fill: transparent;
	stroke: transparent;
}

/* --------------------- Handles -------------------- */

.tl-handle {
	pointer-events: all;
}

.tl-handle__bg {
	fill: transparent;
	stroke: transparent;
	pointer-events: all;
	cursor: var(--tl-cursor-grabbing);
}

.tl-handle__fg {
	fill: var(--color-selected-contrast);
	stroke: var(--color-selection-stroke);
	stroke-width: calc(1.5px * var(--tl-scale));
	pointer-events: none;
}

.tl-handle__create {
	opacity: 0;
}
.tl-handle__create:hover {
	opacity: 1;
}

.tl-handle__bg:active {
	fill: none;
}

.tl-handle__bg:hover {
	cursor: var(--tl-cursor-grab);
	fill: var(--color-selection-fill);
}

@media (pointer: coarse) {
	.tl-handle__bg:active {
		fill: var(--color-selection-fill);
	}

	.tl-handle__create {
		opacity: 1;
	}
}

/* ------------------ Bounds Detail ----------------- */

.tl-image,
.tl-video {
	object-fit: cover;
	background-size: cover;
	width: 100%;
	height: 100%;
}

.tl-image-container,
.tl-embed-container {
	width: 100%;
	height: 100%;
	pointer-events: all;
	/* background-color: var(--color-background); */

	display: flex;
	justify-content: center;
	align-items: center;
}

.tl-image__tg {
	--scale: calc(min(2, var(--tl-scale)));
	position: absolute;
	top: calc(var(--scale) * 8px);
	right: calc(var(--scale) * 8px);
	font-size: 10px;
	transform-origin: top right;
	background-color: var(--color-background);
	padding: 2px 4px;
	border-radius: var(--radius-1);
}

/* --------------------- Nametag -------------------- */

.tl-collaborator-cursor {
	position: absolute;
}

.tl-nametag {
	position: absolute;
	top: 16px;
	left: 13px;
	width: fit-content;
	height: fit-content;
	max-width: 120px;
	padding: 3px 6px;
	white-space: nowrap;
	position: absolute;
	overflow: hidden;
	text-overflow: ellipsis;
	font-size: 12px;
	font-family: var(--font-body);
	border-radius: var(--radius-2);
	color: var(--color-selected-contrast);
}

.tl-nametag-title {
	position: absolute;
	top: -2px;
	left: 13px;
	width: fit-content;
	height: fit-content;
	padding: 0px 6px;
	max-width: 120px;
	white-space: nowrap;
	position: absolute;
	overflow: hidden;
	text-overflow: ellipsis;
	font-size: 12px;
	font-family: var(--font-body);
	text-shadow: var(--tl-text-outline);
	color: var(--color-selected-contrast);
}

.tl-nametag-chat {
	position: absolute;
	top: 16px;
	left: 13px;
	width: fit-content;
	height: fit-content;
	color: var(--color-selected-contrast);
	white-space: nowrap;
	position: absolute;
	padding: 3px 6px;
	font-size: 12px;
	font-family: var(--font-body);
	opacity: 1;
	border-radius: var(--radius-2);
}

.tl-cursor-chat {
	position: absolute;
	color: var(--color-selected-contrast);
	white-space: nowrap;
	padding: 3px 6px;
	font-size: 12px;
	font-family: var(--font-body);
	pointer-events: none;
	z-index: var(--layer-cursor);
	margin-top: 16px;
	margin-left: 13px;
	opacity: 1;
	border: none;
	user-select: text;
	border-radius: var(--radius-2);
}

.tl-cursor-chat .tl-cursor-chat__bubble {
	padding-right: 12px;
}

.tl-cursor-chat::selection {
	background: var(--color-selected);
	color: var(--color-selected-contrast);
	text-shadow: none;
}

.tl-cursor-chat-fade {
	/* Setting to zero causes it to immediately disappear */
	/* Setting to near-zero causes it to fade out gradually */
	opacity: 0.0001;
	transition: opacity 5s ease-in-out;
}

.tl-cursor-chat::placeholder {
	color: var(--color-selected-contrast);
	opacity: 0.7;
}

/* -------------------------------------------------- */
/*                       Spinner                      */
/* -------------------------------------------------- */

@keyframes spinner {
	to {
		transform: rotate(360deg);
	}
}

/* ------------------- Text Shape ------------------- */

.tl-text-shape__wrapper {
	position: relative;
	font-weight: normal;
	min-width: 1px;
	padding: 0px;
	margin: 0px;
	border: none;
	height: 100%;
	font-variant: normal;
	font-style: normal;
	pointer-events: all;
	white-space: pre-wrap;
	overflow-wrap: break-word;
	text-shadow: var(--tl-text-outline);
}

.tl-text-shape__wrapper[data-align='start'] {
	text-align: left;
}

.tl-text-shape__wrapper[data-align='middle'] {
	text-align: center;
}

.tl-text-shape__wrapper[data-align='end'] {
	text-align: right;
}

.tl-text-shape__wrapper[data-font='draw'] {
	font-family: var(--tl-font-draw);
}

.tl-text-shape__wrapper[data-font='sans'] {
	font-family: var(--tl-font-sans);
}

.tl-text-shape__wrapper[data-font='serif'] {
	font-family: var(--tl-font-serif);
}

.tl-text-shape__wrapper[data-font='mono'] {
	font-family: var(--tl-font-mono);
}

.tl-text-shape__wrapper[data-isediting='true'] .tl-text-content {
	opacity: 0;
}

.tl-text {
	/* remove overflow from textarea on windows */
	margin: 0px;
	padding: 0px;
	border: 0px;
	color: inherit;
	caret-color: var(--color-text);
	background: none;
	border-image: none;
	font-size: inherit;
	font-family: inherit;
	font-weight: inherit;
	line-height: inherit;
	font-variant: inherit;
	font-style: inherit;
	text-align: inherit;
	letter-spacing: inherit;
	text-shadow: inherit;
	outline: none;
	white-space: pre-wrap;
	word-wrap: break-word;
	overflow-wrap: break-word;
	pointer-events: all;
	text-rendering: auto;
	text-transform: none;
	text-indent: 0px;
	display: inline-block;
	appearance: auto;
	column-count: initial !important;
	writing-mode: horizontal-tb !important;
	word-spacing: 0px;
}

.tl-text-measure {
	position: absolute;
	z-index: 999999;
	top: -9999px;
	right: -9999px;
	opacity: 0;
	width: max-content;
	box-sizing: border-box;
	pointer-events: none;
	line-break: normal;
	white-space: pre-wrap;
	word-wrap: break-word;
	overflow-wrap: break-word;
	resize: none;
	border: none;
	user-select: none;
	contain: style paint;
	-webkit-user-select: none;
}
/* ... */

